# snakemakeMethylFrac

./: .gitignore  README.md  pyproject.toml
config/: config_example.yaml
resources/: example_sample_sheet.tsv  hg38_chrom_size.tsv  t2t_chrom_size.tsv
workflow/: Snakefile
workflow/scripts/: filter_adjacent_gatc_sites.py  load_gatc_digestion_to_db.py  make_gatc_db.py  make_slurm_script.py  plot_gatc_half_digestion.py  process_bam_coverage.py  process_bw.py  process_feature.py  process_raw.py
